# sqlfriend

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: command.rs  config.rs  db_client.rs  error.rs  lib.rs  logging.rs  lsp.rs  state.rs  task.rs
crates/core/src/lsp/: client.rs  completer.rs  notification_handler.rs  payload.rs  response.rs  server.rs
crates/readline/: Cargo.toml
crates/readline/src/: main.rs  printer.rs  readline.rs
crates/readline/src/readline/: completer.rs  validator.rs
